layout shift fix

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -96,10 +96,10 @@ textarea {
     resize: vertical;
 }
 
-svg {
-    height: auto;
-    max-width: 100%;
-}
+// svg {
+//     height: auto;
+//     max-width: 100%;
+// }
 
 iframe {
     max-width: 100%;
