--- a/src/scss/components/_teaser.scss
+++ b/src/scss/components/_teaser.scss
@@ -1,8 +1,6 @@
 .teaser {
 
     li {
-        @include highlight-box;
-
         +li {
             margin-top: 1em;
 
@@ -13,30 +11,6 @@
     }
 
     h3 {
-        margin-top: 0;
-        overflow-wrap: word-break;
-    }
-
-    .index-list {
-        max-width: none;
-
-        @media (min-width: $m) {
-            max-width: none;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr;
-            gap: 0em 1em;
-            grid-auto-flow: row;
-            grid-template-areas:
-                ". .";
-
-            @media (min-width: $l) {
-                @include overspill;
-            }
-        }
-    }
-
-    .emoji-title {
-        margin-left: 0;
+        margin-top: .75em;
     }
 }
